# note-revive

./: .env.example  .env.no-ai  .gitattributes  .gitignore  AI-INDEPENDENCE-REPORT.md  BROWSER_WARNINGS_FIX.md  COMPLETE_SETUP_GUIDE.md  DATABASE-CLOSED-ERROR-FIX-REPORT.md  DATABASE_ISSUES_ANALYSIS.md  FINAL_BROWSER_FIXES.md  FINAL_COMPLETION_REPORT.md  FINAL_COMPLETION_REPORT_FINAL.md  INSTALL_STATUS.md  MANUAL_BUILD_GUIDE.md  MIGRATION_GUIDE.md  NETWORK_DIAGNOSIS.md  PROJECT_COMPLETION_STATUS.md  README.md  RELEASE.md  SERVER_START_INSTRUCTIONS.md  SETTINGS-AI-FIX-REPORT.md  TAURI_STATUS.md  chinese-installer.nsi  chinese-license.txt  english-license.txt  final-chinese-installer.nsi  fixed-installer.nsi  index.html  install-rust.bat  install_vs_buildtools.bat  installer.nsi  license.txt  modern-installer.nsi  package-lock.json  package.json  remove_title_task.md  reset-database.js  simple-chinese-installer.nsi  tailwind.config.js  test-ai-features.md  (+12 more)
.claude/: settings.local.json
.github/workflows/: release.yml
dist-portable/: README.md  启动应用.bat
docs/: AI_SETUP_GUIDE.md
src/: App.tsx  db.ts  index.css  main.tsx  test-ai-providers-fix.ts  test-ai-providers.ts  test-ai-setup-flow.tsx  themes.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AISearchSuggestions.tsx  AIWrapperSimple.tsx  EnhancedAISettings.tsx  NotificationPanel.tsx  RelatedNotes.tsx  Settings.tsx  ShortcutsPanel.tsx
src/constants/: shortcuts.ts
src/db/: ai-db.ts  core-db.ts  database-manager.ts  index.ts
src/hooks/: useDialog.tsx  (+3 more)
(+40 files in other folders)
