[package]
name = "note-revive"
version = "1.0.0"
description = "智能便签管理应用 - 作者: 郝好先生"
authors = ["郝好先生 <hhhh124hhhh@qq.com>"]
license = "MIT"
repository = "https://github.com/hhhh124hhhh/note-revive"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
